# ai-opportunity-radar

./: .env.example  .gitignore  ACCOUNT_SETUP.md  AI机会雷达桌面版.bat  CONTRIBUTING.md  DATA_EXPORT_GUIDE.md  DATA_SOURCES.md  GITHUB_DATA_TOOLS_RESEARCH.md  LICENSE  NO_TOKEN_DATA_ACCESS.md  OPEN_SOURCE_CHECKLIST.md  OPPORTUNITY_RADAR.md  PRODUCT_FEEDBACK_TRENDS.md  PROJECT_BLUEPRINT.md  PUBLIC_API_CANDIDATES.md  README.md  REALTIME_MONITOR.md  SECURITY.md  TOKEN_SOURCES.md  build_desktop_exe.bat  config.ai-current.json  config.example.json  config.github-producthunt-ai.json  config.product-demand-sources.json  config.realtime-ai-platforms.json  connect_github_token.bat  pyproject.toml  run_ai_radar.bat
.github/workflows/: tests.yml
data/: external_sources.template.csv  product_data_cleanup.sample.csv  products.sample.csv  search_results.sample.csv
data/samples/: manual_research_sample.csv
docs/: ARCHITECTURE.md  PROJECT_STATUS.md
scripts/: check_credentials.py  collect_github_producthunt_ai.py  desktop_app.py  generate_demand_source_report.py  generate_opportunity_report.py  generate_product_feedback_report.py  import_external_sources.py  product_data_cleaner.py  realtime_ai_platform_monitor.py  setup_tokens.py  validate_external_sources.py
shopping_intel/: __init__.py  analysis.py  cli.py  config.py  models.py  opportunity.py  report.py  signals.py
shopping_intel/adapters/: csv_source.py  factory.py  http_json.py
tests/: test_google_trends_import.py  test_opportunity_decisions.py  test_opportunity_trends.py  test_product_data_cleaner.py
